--- a/reini.html
+++ b/reini.html
@@ -14,7 +14,8 @@ ingreso
 <ul>
  <li><a href="http://localhost/carrito/Formulariodecargadedatos.php">Registrarse</a></li>  
 
-<li><a href="http://localhost/carrito/inicio.html" target="_blank">iniciar sesion</a></li>  
+<li><a target="_blank" href="http://localhost/carrito/inicio.html" >iniciar sesion</a></li>  
+
 
 
 
